# tutorial

./: .dockerignore  Cargo.toml  Dockerfile  config.yaml  spec.yaml
.github/workflows/: build.yml  general.yml
.sqlx/: query-07525d11220689689eae818f81baddc7a6890159fed50a1ed201cf01842c0fc1.json  query-1a66539537c71a52ffacfe03719f39c0e6b174a6cecccbfba7750371af8cd19d.json  query-1aad451916b16c26edf7329d93b7cf265d3fd40cf3cb2450d6faa085fa22a549.json  query-1b6a487bd9ab26338e751aa14b814f8a22dcd32db52fb5c0b288718f2caa4970.json  query-2a0042f4c4b074c14be4d8b3a2cb6928f5db06d6da4dc584538e39eaf577b67f.json  query-2ff399b44300111f6a0c099bc118212d566b5be2705a045c65f27dcd8a8182a3.json  query-3d48399d2f469a8410f2f70ec6641e1adc15d7637439e1fa8faa8c2101f5e321.json  query-3de42f028a229e360e6cd8cd3d767bc9e666837118df36e697749bf0cf3ff8be.json  query-41b61c76d202764f2414cc6fa8127bf6f5157495fe914eafd8e1a8ebd6e27f9c.json  query-4ac76e2263cf4e9fb77dd737fae2206583312ebfb2e1f026dd1b9e781c787b8d.json  query-4faaee51cf3698795e6c4ed70784065c28ae30859635acb90c8b15b2e32d638e.json  query-6154983d0530d52f30fb9b7e3d8eb59c0b075771fc80ac4ed787c1a7b03185c8.json  query-691ee1eeccd5a9a8d202bd0ea0ba4571c65eb769a95521845848ea5b62a0b0db.json  query-69387241584c918aeed791185798897fdced8309592c85156ff537d17eb5ef60.json  query-6b7804a86f2e969aed85e961bee7ba54dd96b4dc43822f8f403f4d69240039f0.json  query-78d873fcf13bedd37049e4fba35d762503c89b3c5fb0a3b0d7e9df645beae52a.json  query-856931f6985206ea0f2990d497881d550dd47f22d4c26e513694f42c1a8ad8cb.json  query-8986daca877e9777d81b39264bee424b0c22c9f936ecbc8ddddcd9dde596ea80.json  query-98f51027037ffd54784e371e7855614204c5f4195ec3346948f76a3c0adc6e9a.json  query-9b5b32b145a93bcc13dbd6a6b04e1935fe33cae25cfb2df93f5dbc582119ae30.json  query-aad27e0cb11fdfd092d9eff5fcd699c4f587d90e9729e326e56b9947b33af7a0.json  query-baca5b58059682d62637fdf5be17d62bc92c25f9e483d92b54bfdaed5e54fa13.json  query-c079c50ba72aa77cb5a18607ae6f8d49d7c10df4425d20937bd97a9342dbf8a0.json  query-c7dd6ab1c61dbfff0b9107b9ec9cac6b641f603e647bc94e63b27edf43ebc2a7.json  query-cb8e77909d1385693382071e76cda6fae413136e94279fd87c5818ba41ae580d.json  query-f37109340ddcaeb8a599b71cf93bf69a506f6156183ae2cc7d8338088c6d8ad6.json
config/: base.yaml  local.yaml  production.yaml
migrations/: 20241212064211_subscription.sql  20241218074303_make_status_not_null_in_subscription.sql  20241218074755_create_subscription_token_table.sql  20250108104010_add_seed_user.sql  20250114074012_create_idempotency_table.sql  20250115080912_create_newsletter_issue_table.sql  20250115081849_create_issue_delivery_queue_table.sql
scripts/: drop_tmp_database.bat  init_db.bat  init_db.sh
src/: config.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  route.rs  routes.rs  session_state.rs  startup.rs  telemetry.rs  util.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber.rs  subscriber_email.rs  subscriber_name.rs  subscriber_status.rs
src/idempotency/: key.rs  persistence.rs
src/route/: subscription.rs
tests/: route.rs  route_test.rs  routes_test.rs
(+26 files in other folders)
