[package]
name = "tutorial"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
config = "0.14.1"
once_cell = "1.20.2"
reqwest = "0.12.9"
secrecy = { version="0.10.3", features=[ "serde" ] }
serde = { version="1.0.215", features=[ "derive" ] }
tokio = { version="1.42.0", features=[ "macros", "rt-multi-thread" ] }
tracing = "0.1.41"
tracing-actix-web = "0.7.15"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version="0.3.19", features=[ "env-filter" ] }
uuid = { version="1.11.0", features=[ "v4" ] }

[dependencies.sqlx]
version = "0.8.2"
features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono", #日期时间映射支持
]
