[package]
name = "tutorial"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-session = { version="0.10.1", features=[ "redis-session", "redis-session-rustls" ] }
actix-web = "4.9.0"
actix-web-flash-messages = { version="0.5.0", features=[ "cookies" ] }
anyhow = "1.0.95"
argon2 = { version="0.5.3", features=[ "std" ] }
config = "0.14.1"
linkify = "0.10.0"
once_cell = "1.20.2"
rand = "0.8.5"
reqwest = { version="0.12.9", features=[ "json", "cookies" ] }
secrecy = { version="0.10.3", features=[ "serde" ] }
serde = { version="1.0.215", features=[ "derive" ] }
serde-aux = "4.5.0"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
thiserror = "2.0.9"
tokio = { version="1.42.0", features=[ "macros", "rt-multi-thread" ] }
tracing = "0.1.41"
tracing-actix-web = "0.7.15"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version="0.3.19", features=[ "env-filter" ] }
unicode-segmentation = "1.12.0"
uuid = { version="1.11.0", features=[ "v4", "serde" ] }
validator = "0.19.0"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
fake = "3.0.1"
claim = "0.5.0"
wiremock = "0.6.2"
serde_json = "1.0.133"
serde_urlencoded = "0.7.1"
